<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:paddingBottom="70dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/add_photo"
            android:textColor="@color/pink"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/image_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardElevation="4dp"
            app:layout_constraintCircleRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <ImageView
                android:id="@+id/image_photokids"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_photo_placehorlder" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_add_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/soft_pink"
            android:padding="3dp"
            android:text="@string/add_photo"
            android:textColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_container"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_submit_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/soft_pink"
            android:fontFamily="@font/quicksand_bold"
            android:padding="3dp"
            android:text="@string/submit_photo"
            android:textColor="@color/dark_grey"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_container"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/button_change_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/change_photo"
            android:textColor="@color/soft_pink"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_submit_photo"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/movie_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/movie_title_addphoto"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_container" />

        <EditText
            android:id="@+id/movie_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movie_textview" />

        <TextView
            android:id="@+id/describe_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/desc_add_photo"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_edittext" />

        <EditText
            android:id="@+id/desc_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/describe_textview" />

        <Button
            android:id="@+id/button_submit_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/soft_pink"
            android:enabled="true"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/desc_save"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/desc_edittext" />

        <Button
            android:id="@+id/button_submit_disable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/grey"
            android:enabled="false"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/desc_save"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/desc_edittext" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>