<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
    android:orientation="vertical"
    tools:context=".view.fragment.MovieListFragment">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:maxLines="2"
        android:text="@string/list_title"
        android:textColor="@color/pink"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:background="@color/soft_pink"
        android:fontFamily="@font/quicksand_bold"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/to_gallery"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toStartOf="@id/button_music"
        app:layout_constraintTop_toBottomOf="@id/hello_text"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_music"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:background="@color/soft_pink"
        android:fontFamily="@font/quicksand_bold"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/to_music"
        android:textColor="@color/dark_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello_text"
        app:layout_constraintStart_toEndOf="@id/button_gallery"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/separator"
        app:layout_constraintTop_toBottomOf="@id/button_gallery" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movies_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/separator" />

</androidx.constraintlayout.widget.ConstraintLayout>