<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="12dp"
        android:fillViewport="true"
        android:paddingBottom="100dp"
        tools:context=".view.fragment.MovieDetailFragment"
        tools:ignore="RtlHardcoded">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/pink"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="THE LION KING" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/abominable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_title" />

        <TextView
            android:id="@+id/movie_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            tools:text="@string/movie_year" />

        <TextView
            android:id="@+id/movie_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/movie_director"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_year" />

        <TextView
            android:id="@+id/movie_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_director"
            tools:text="@string/movie_synopsis" />

        <TextView
            android:id="@+id/movie_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_synopsis"
            tools:text="@string/movie_trailer" />

        <RelativeLayout
            android:id="@+id/thumbnail_youtube_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/movie_trailer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/imageview_thumbnail"
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_centerInParent="true"
                android:scaleType="fitXY"
                tools:src="#000"/>
            
            <ImageView
                android:id="@+id/imagevie_play"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_play_button"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

<!--        <Button-->
<!--            android:id="@+id/button_watch_trailer"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:background="@color/grey"-->
<!--            android:fontFamily="@font/quicksand_bold"-->
<!--            android:padding="2dp"-->
<!--            android:text="@string/watch_trailer"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/movie_trailer" />-->

        <TextView
            android:id="@+id/upload_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/quicksand"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thumbnail_youtube_container"
            tools:text="@string/upload_photo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>